src/test/deca/context/invalid/non_provided/bad_extend.deca
// Description:
//    Déclaration d'une classe vide qui étend 
//    une classe non déclarée
//
// Resultats:
//    
//
// Historique:
//    cree le 17/01/2020

class A extends B {

}